fix: fixing the header colors in dark mode devices

--- a/src/components/Presentation/style.module.scss
+++ b/src/components/Presentation/style.module.scss
@@ -5,6 +5,8 @@
   color: var(--dark-grey);
   padding: 32px 0;
 
+  align-items: center;
+
   & > :not(.icons) {
     padding: 0 32px;
   }
